--- a/src/app/cliente/cadastrar/cadastrar.component.html
+++ b/src/app/cliente/cadastrar/cadastrar.component.html
@@ -27,6 +27,11 @@
           <input matInput type="number" placeholder="Ex: 25" required>
           <mat-icon matSuffix>numbers</mat-icon>
         </mat-form-field>
+
+        <!-- Checkbox para aceitar os termos -->
+        <mat-checkbox>
+          Aceito os termos e condições
+        </mat-checkbox>
       </form>
     </mat-card-content>
 
